--- a/client/src/components/styles/table.scss
+++ b/client/src/components/styles/table.scss
@@ -21,7 +21,7 @@
       background: linear-gradient(
         348deg,
         rgba(black, 1) -50%,
-        rgba($blue, 0.79) 100%
+        rgba(0, 101, 205, 1) 100%
       );
       cursor: pointer;
       &:hover {
