--- a/client/src/components/styles/deals.scss
+++ b/client/src/components/styles/deals.scss
@@ -6,7 +6,11 @@
   grid-gap: 1rem;
   .contactsContainer {
     display: grid;
-    grid-template-rows: min-content min-content 1fr;
+    grid-template-rows: min-content min-content min-content 1fr;
+    .search {
+      z-index: 10;
+      padding: 0;
+    }
     .userCard {
       max-width: 18rem;
       background: $lightGreen2;
@@ -190,10 +194,9 @@
       }
     }
     .chats {
-      overflow-y: flex;
       padding: 0 1rem;
       display: flex;
-      flex-direction: column;
+      flex-direction: column-reverse;
       overflow: auto;
       grid-gap: 1px;
       .bubble {
@@ -211,6 +214,12 @@
           font-weight: 500;
         }
         .text {
+          .amount {
+            display: block;
+            font-size: 3rem;
+            text-align: center;
+            font-weight: 300;
+          }
           margin: auto;
           max-width: 80%;
           padding: 0.7rem 1rem;
@@ -296,6 +305,11 @@
             background: $blue;
             margin-left: 0;
             border-radius: 0.85rem 0.85rem 0.85rem 0;
+          }
+        }
+        &.milestone {
+          .text {
+            cursor: pointer;
           }
         }
       }
@@ -495,7 +509,7 @@
   .chatContainer {
     padding: 0 1rem;
     .contactsContainer {
-      grid-template-rows: min-content 1fr;
+      grid-template-rows: min-content min-content 1fr;
       width: 100%;
       margin-bottom: 1rem;
     }
@@ -513,6 +527,7 @@
       .chat {
         display: grid;
         .chatHead {
+          padding: 0.3rem 1rem;
           .profile {
             .back {
               display: grid;
@@ -521,6 +536,15 @@
               border: none;
               outline: none;
               background: none;
+            }
+          }
+        }
+        .chats {
+          .bubble {
+            .text {
+              .amount {
+                font-size: 2rem;
+              }
             }
           }
         }
