--- a/client/src/components/styles/landingPage.scss
+++ b/client/src/components/styles/landingPage.scss
@@ -49,6 +49,7 @@
           top: 0;
         }
         svg {
+          position: absolute;
           transform: scale(1.01);
         }
       }
@@ -61,7 +62,7 @@
         grid-gap: 2rem;
         a {
           flex: 1;
-          max-width: 50%;
+          max-width: 12rem;
           border-radius: 2rem;
           width: max-content;
           text-align: center;
