--- a/client/src/components/styles/singleTicket.scss
+++ b/client/src/components/styles/singleTicket.scss
@@ -75,7 +75,7 @@
       background-image: linear-gradient(
         348deg,
         rgba(2, 0, 36, 0) 0%,
-        rgba($green, 0.79) 100%
+        rgba(38, 203, 143, 0.79) 100%
       );
       button {
         font-weight: 600;
@@ -88,7 +88,7 @@
         background: linear-gradient(
           348deg,
           rgba(black, 1) -50%,
-          rgba($blue, 0.79) 100%
+          rgba(7, 4, 163, 0.79) 100%
         );
         cursor: pointer;
         &:hover {
