--- a/client/src/components/styles/userStart.scss
+++ b/client/src/components/styles/userStart.scss
@@ -168,8 +168,26 @@
         }
       }
       &.resetPass {
+        .back {
+          cursor: pointer;
+        }
         form {
-          label,
+          label {
+            grid-column: 1/3;
+            .resend {
+              font-size: 0.9rem;
+              display: block;
+              margin-top: 1rem;
+              a {
+                color: $blue;
+                font-weight: 500;
+                cursor: pointer;
+                &:hover {
+                  text-decoration: underline;
+                }
+              }
+            }
+          }
           .code {
             grid-column: 1/3;
             display: flex;
