--- a/client/src/components/styles/elements.scss
+++ b/client/src/components/styles/elements.scss
@@ -594,15 +594,19 @@
 .tabs {
   z-index: 50;
   display: flex;
+  flex-wrap: wrap;
+  max-width: 100vw;
   // position: sticky;
   // top: -1rem;
   background: white;
   padding-top: 1rem;
   margin-top: -1rem;
-  border-bottom: 1px solid $blue;
+  // border-bottom: 1px solid $blue;
   li {
+    white-space: nowrap;
     padding: 1rem 2rem;
     cursor: default;
+    border-bottom: 1px solid $blue;
     background: rgba(0, 0, 0, 0.01);
     &.active {
       background: rgba(0, 0, 0, 0.05);
