--- a/client/src/components/styles/deals.scss
+++ b/client/src/components/styles/deals.scss
@@ -165,12 +165,14 @@
     grid-template-rows: min-content 1fr min-content;
     .chatHead {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-end;
       align-items: center;
       height: min-content;
       border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-      padding: 1rem;
+      padding: 0.7rem 1rem;
       .profile {
+        margin: auto;
+        margin-left: 0;
         display: flex;
         grid-gap: 1rem;
         align-items: center;
@@ -190,6 +192,17 @@
             font-size: 0.8em;
             color: rgba(0, 0, 0, 0.5);
           }
+        }
+      }
+      & > a {
+        background: $blue;
+        color: white;
+        padding: 0.3rem 1rem;
+        border-radius: 2rem;
+        border: 2px solid $blue;
+        &:hover {
+          background: white;
+          color: $blue;
         }
       }
     }
