--- a/client/src/components/styles/products.scss
+++ b/client/src/components/styles/products.scss
@@ -56,7 +56,7 @@
   }
   .products {
     tr {
-      grid-template-columns: 1.5rem 4.5rem 5rem 1fr 5rem 4.5rem 4rem 3rem 5rem 6rem 4rem;
+      grid-template-columns: 1.5rem 4.5rem 5rem 1fr 5rem 6rem 4.5rem 4rem 3rem 5rem 6rem 4rem;
       grid-gap: 1rem;
       td,
       th {
