--- a/client/src/components/styles/marketplace.scss
+++ b/client/src/components/styles/marketplace.scss
@@ -101,20 +101,22 @@
     .products {
       max-width: 100%;
       display: grid;
-      // grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      grid-gap: 0.5rem;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      // grid-gap: 1px;
+      // padding: 1px;
     }
     .product {
+      border: 1px solid rgba(0, 0, 0, 0.1);
       padding: 1rem;
-      background: $lightGreen2;
-      border-radius: 0.7rem;
-      display: flex;
+      // background: $lightGreen2;
+      // border-radius: 0.7rem;
+      display: grid;
       align-items: center;
       grid-gap: 1.25rem;
       grid-auto-rows: min-content 1fr min-content;
       position: relative;
       .thumb {
-        width: 10rem;
+        // width: 10rem;
         height: 10rem;
         position: relative;
         display: grid;
@@ -151,6 +153,7 @@
           -webkit-box-orient: vertical;
           -webkit-line-clamp: 3;
           overflow: hidden;
+          display: none;
         }
         .price {
           font-size: 1.3rem;
@@ -162,18 +165,18 @@
         }
       }
       .actions {
-        position: absolute;
-        right: 1rem;
-        bottom: 1rem;
+        // position: absolute;
+        // right: 1rem;
+        // bottom: 1rem;
         display: flex;
         flex-wrap: wrap;
         button {
           cursor: pointer;
           flex: 1;
-          border: 1px solid $green;
+          border: 2px solid $blue;
           border-radius: 4px;
           padding: 0.3rem;
-          background: white;
+          background: $blue;
           color: white;
           font-weight: 600;
           height: 2.2rem;
@@ -186,7 +189,7 @@
             }
           }
           &:hover {
-            background: $green;
+            background: white;
             svg {
               path {
                 fill: white;
@@ -952,15 +955,20 @@
       .filters {
         flex-direction: column;
         align-items: flex-start;
+        grid-gap: 1rem;
         & > section {
           display: flex;
           width: 100%;
         }
       }
-      .product {
-        .thumb {
-          height: 5.5rem;
-          width: 5.5rem;
+      .products {
+        grid-template-columns: 1fr 1fr;
+        .product {
+          .thumb {
+            // height: 5.5rem;
+            // width: 5.5rem;
+          }
+          grid-gap: 0.7rem;
         }
       }
     }
