--- a/client/src/components/styles/products.scss
+++ b/client/src/components/styles/products.scss
@@ -128,7 +128,8 @@
     }
     .dscr,
     .images,
-    .btns {
+    .btns,
+    .tags {
       grid-column: 1/3;
     }
     .discountType {
@@ -157,6 +158,73 @@
         &.final {
           border-top: 1px solid rgba(0, 0, 0, 0.2);
           color: $red;
+        }
+      }
+    }
+    .tags {
+      label {
+        margin-bottom: 0.5rem;
+      }
+      ul {
+        border-radius: 1rem;
+        padding: 0.75rem;
+        background: rgba(0, 0, 0, 0.02);
+        display: flex;
+        flex-wrap: wrap;
+        grid-gap: 0.75rem;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        li {
+          display: flex;
+          grid-gap: 1rem;
+          align-items: center;
+          height: min-content;
+          padding: 0.2rem 0.75rem;
+          padding-right: 0.2rem;
+          background: white;
+          border: 1px solid rgba(0, 0, 0, 0.2);
+          border-radius: 2rem;
+          &:not(.form) {
+            &:hover {
+              background: rgba(0, 0, 0, 0.02);
+            }
+          }
+          button {
+            padding: 0.3rem;
+            display: inline-grid;
+            place-items: center;
+            outline: none;
+            border: none;
+            border-radius: 2rem;
+            overflow: hidden;
+            cursor: pointer;
+            svg {
+              path {
+                fill: rgba(0, 0, 0, 0.54);
+              }
+            }
+          }
+          &.form {
+            input {
+              padding: 0.2rem;
+              border: none;
+              max-width: 8rem;
+            }
+            button {
+              display: flex;
+              white-space: nowrap;
+              align-items: center;
+              grid-gap: 0.5rem;
+              border-radius: 0.3rem 2rem 2rem 0.3rem;
+              background: $blue;
+              cursor: pointer;
+              border: 2px solid $blue;
+              color: white;
+              &:hover {
+                background: white;
+                color: $blue;
+              }
+            }
+          }
         }
       }
     }
