--- a/client/src/components/styles/products.scss
+++ b/client/src/components/styles/products.scss
@@ -460,8 +460,61 @@
 }
 
 .batchItemPreview {
-  table {
-    padding: 1.5rem !important;
+  max-width: 80rem;
+  .content {
+    padding: 1.5rem;
+    display: grid;
+    grid-gap: 1rem;
+    .head {
+      background: none;
+      box-shadow: none;
+      z-index: 10;
+    }
+    .createDraft {
+      form {
+        display: grid;
+        grid-gap: 1.2rem;
+        .category {
+          display: flex;
+          grid-gap: 1rem;
+          align-items: center;
+          .combobox {
+            input {
+              border-radius: 0.2rem;
+              padding: 0.3rem;
+              border: 1px solid rgba(0, 0, 0, 0.3);
+            }
+            button {
+              right: 0.3rem;
+            }
+          }
+        }
+        p {
+          span {
+            margin-top: 0.2rem;
+            font-size: 0.8rem;
+            display: block;
+            color: rgba(0, 0, 0, 0.6);
+          }
+        }
+        .btns {
+          display: flex;
+          grid-gap: 1rem;
+          justify-content: flex-end;
+          flex-wrap: wrap;
+          .clean {
+            border: none;
+            outline: none;
+            background: none;
+            color: $blue;
+            font-size: 1rem;
+          }
+          button {
+            margin: 0;
+          }
+        }
+      }
+    }
   }
   tr {
     &:not(.placeholder) {
@@ -507,13 +560,13 @@
     }
   }
   .submit {
+    margin: auto;
+    margin-right: 0;
     width: max-content;
     padding: 0.5rem 1.5rem;
     background: $blue;
     border: 2px solid $blue;
     color: white;
-    margin: 2rem auto;
-    margin-right: 2rem;
     font-size: 1rem;
     &:hover {
       background: white;
