--- a/client/src/components/styles/account.scss
+++ b/client/src/components/styles/account.scss
@@ -2131,6 +2131,10 @@
         font-size: 1.5rem;
         color: $blue;
         margin-bottom: 1rem;
+        font-weight: 400;
+        span {
+          font-size: 0.9rem;
+        }
       }
       ul {
         display: grid;
