--- a/client/src/components/styles/marketplace.scss
+++ b/client/src/components/styles/marketplace.scss
@@ -534,13 +534,44 @@
           max-width: 18rem;
           grid-gap: 0.5rem;
           padding-top: 0.75rem;
+          label {
+            font-size: 0.6em;
+            text-align: left;
+          }
           p {
             align-items: center;
-            label {
-              font-size: 0.6em;
-            }
             display: flex;
             justify-content: space-between;
+          }
+          .coupon {
+            margin: 0.5rem 0;
+            align-items: center;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            button {
+              border-radius: 0.3rem;
+              padding: 0.5rem;
+              cursor: pointer;
+              background: $blue;
+              color: white;
+              border: 2px solid $blue;
+              &:hover {
+                background: white;
+                color: $blue;
+              }
+            }
+            form {
+              display: flex;
+              grid-gap: 0.25rem;
+              align-items: center;
+              input {
+                border-radius: 5px;
+                font-size: 1.2rem;
+                padding: 0.3rem 0.5rem;
+                width: 8rem;
+              }
+            }
           }
           .grandTotal {
             border-top: 1px solid rgba(0, 0, 0, 0.3);
